--- a/src/components/css/LeftSidebar.css
+++ b/src/components/css/LeftSidebar.css
@@ -2,7 +2,7 @@
     width: 40%;
 }
 
-.bgimg {
+.sidebar-background {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
