--- a/src/components/css/AboutSection.css
+++ b/src/components/css/AboutSection.css
@@ -1,11 +1,14 @@
-#photographyBar{
-    width: 75%;
+.row {
+    padding-top: 10px;
 }
 
-#webBar{
-    width: 85%;
+.icon-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
-#wordpressBar{
-    width: 70%;
+.iconImg {
+    width: 60%;
 }
