--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,3 +1,22 @@
-.footer {
-    margin:-24px;
+footer {
+    background-color: lightgray;
+    opacity: 0.7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 25vh;
+    width: 60%; /* As the picture uses the 40% of the screen, footer needs to use only 60% */
+    margin-left: auto; /* Also, align it to the right, to see that 60% */
+    @media screen and (max-width: 992px) {
+          width: 100%; /* When the screen is smaller and the left picture dissappear the footer returns to 100% */
+      }
+}
+
+.footer-icons a {
+    margin: 0 10px; /* Add left and right margin to create spacing between "a" elements */
+}
+
+footer a:hover {
+    opacity: 0.7;
 }
