--- a/src/components/css/HiddenSidebar.css
+++ b/src/components/css/HiddenSidebar.css
@@ -12,10 +12,23 @@
     padding-top: 150px;
     right: 0;
     z-index: 2;
-    width: 60%;
     background-color: black;
     animation: animate-right 0.5s;
     font-size: 2rem;
+}
+
+/* For screens larger than 768px, use 60% width */
+@media screen and (min-width: 769px) {
+    #hiddenSidebar {
+        width: 60%;
+    }
+}
+
+/* For screens 768px and smaller, use 100% width */
+@media screen and (max-width: 768px) {
+    #hiddenSidebar {
+        width: 100%;
+    }
 }
 
 /*('rem' --> root em) 1 rem is equal to the font size of the root element, so if the root element changes, 
