--- a/src/components/css/ContactSection.css
+++ b/src/components/css/ContactSection.css
@@ -8,5 +8,10 @@
 }
 
 .w3-section {
-    color: black;
+    color: rgb(30, 30, 30);
+    transition: color 0.5s ease;
+}
+
+.dark .w3-section {
+    color: whitesmoke
 }
