--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,11 +1,15 @@
-.home-page-footer {
+.home-page-footer, .other-page-footer {
     background-color: lightgray;
+    transition: background-color 0.5s ease;
     opacity: 0.7;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 25vh;
+}
+
+.home-page-footer {
     width: 60%; /* As the picture uses the 40% of the screen, footer needs to use only 60% */
     margin-left: auto; /* Also, align it to the right, to see that 60% */
     @media screen and (max-width: 992px) {
@@ -14,13 +18,6 @@
 }
 
 .other-page-footer {
-    background-color: lightgray;
-    opacity: 0.7;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 25vh;
     width: 100%; /* Width for other pages */
   }
 
@@ -30,4 +27,8 @@
 
 footer a:hover {
     opacity: 0.7;
+}
+
+.dark .home-page-footer, .dark .other-page-footer {
+    background-color: black;
 }
