--- a/src/components/css/ProjectBody.css
+++ b/src/components/css/ProjectBody.css
@@ -20,3 +20,12 @@ footer {
 footer a:hover {
     opacity: 0.7;
 }
+
+.project-text{
+    padding: 4rem;
+    font-size: large;
+}
+
+#project-img{
+    padding: 4rem;
+}
