--- a/src/components/css/ContactSection.css
+++ b/src/components/css/ContactSection.css
@@ -15,3 +15,21 @@
 .dark .w3-section {
     color: whitesmoke
 }
+
+#messageBtn {
+    background-color: lightgray;
+    transition: background-color 0.5s ease;
+    margin-top: 16px;
+    padding: 12px 24px;
+    border-radius: 5px;
+    color: black;
+}
+
+#messageBtn:hover {
+    background-color: rgb(100, 100, 100) !important;
+    color: white !important;
+}
+
+.dark #messageBtn {
+    background-color: rgb(20, 20, 20);
+}
