--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -23,6 +23,7 @@
 
 .footer-icons a {
     margin: 0 10px; /* Add left and right margin to create spacing between "a" elements */
+    text-decoration: none;
 }
 
 footer a:hover {
