--- a/src/components/css/NavButton.css
+++ b/src/components/css/NavButton.css
@@ -1,16 +1,41 @@
 #menuIcon{
-    width: auto; 
     right: 0;
+    top: 0;
+    margin-top: 12px;
+    margin-right: 24px;
+    width: 58.83px;
+    height: 51.83px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
     color: black;
     background-color: whitesmoke;
-    transition: color 0.5s ease, background-color 0.5s ease;
+    transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease;
 }
 
 .dark #menuIcon{
-    width: auto; 
-    right: 0;
-    color: white;
+    color: whitesmoke;
     background-color: rgb(30, 30, 30);
 }
 
+#menuIcon:hover {
+    background-color: rgb(65, 65, 65) !important;
+    box-shadow: 0 0 10px black;
+    color: whitesmoke !important;
+}
 
+.dark #menuIcon:hover {
+    box-shadow: 0 0 10px lightgray;
+}
+
+#menuIcon:focus{
+    color: whitesmoke;
+    background-color: rgb(20, 20, 20);
+    box-shadow: 0 0 10px black;
+    outline: none;
+}
+
+.dark #menuIcon:focus{
+    box-shadow: 0 0 10px whitesmoke;
+}
