--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ hr {
 /* Dark theme styles */
 body.dark {
     color: whitesmoke;
-    background-color: rgb(30, 30, 30);
+    background-color: rgb(45, 45, 45);
 }
 
 .dark h1, .dark h2, .dark h3, .dark h4, .dark h5, .dark h6 {
@@ -31,6 +31,11 @@ body.dark {
 
 .dark hr {
     border-top: 5px double whitesmoke;
+}
+
+.button-text {
+    margin-left: 5px;
+    font-weight: bold;
 }
 
 /* Home Page CSS */
