--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -26,8 +26,8 @@
     text-decoration: none;
 }
 
-footer a:hover {
-    opacity: 0.7;
+.footer-icons a:hover {
+    opacity: 0.5;
 }
 
 .dark .home-page-footer, .dark .other-page-footer {
