--- a/src/components/css/LeftSidebar.css
+++ b/src/components/css/LeftSidebar.css
@@ -6,6 +6,6 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('../../../public/img/portrait.jpg');
-    min-height: 100%;
+    background-image: url('../../../public/img/portrait2.jpg');
+    height: 100%;
   }
