--- a/src/components/css/AboutSection.css
+++ b/src/components/css/AboutSection.css
@@ -7,11 +7,23 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    border-radius: 15px;
+    padding: 10px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.icon-container:hover {
+    background-color: lightgrey;
+    transform: scale(1.05);
+}
+
+.dark .icon-container:hover {
+    background-color: rgb(65, 65, 65);
 }
 
 .iconImg {
     width: 60%;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 #about-text {
@@ -36,6 +48,7 @@
 .skill-text{
     color: black;
     margin-top: 5px;
+    margin-bottom: 0px;
     transition: color 0.5s ease;
 }
 
