--- a/src/components/css/ContactSection.css
+++ b/src/components/css/ContactSection.css
@@ -7,8 +7,10 @@
     color: whitesmoke;
 }
 
-.contact-form input, .contact-form textarea {
-    border-radius: 5px;
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .contact-info i {
@@ -19,16 +21,32 @@
     opacity: 0.5;
 }
 
-.get-touch {
-    font-size: large;
-}
-
-#mapImg {
+#map {
     border-radius: 5px;
-    margin: 32px 0;
+    margin-bottom: 32px;
     width: 100%;
     max-width: 450px;
     height: 45vh;
+}
+
+.get-touch {
+    font-size: large;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-form input, .contact-form textarea {
+    border-radius: 5px;
+}
+
+.contact-form p {
+    width: 80%;
 }
 
 .message-btn {
@@ -43,7 +61,7 @@
 }
 
 .dark .message-btn {
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(45, 45, 45);
     color: whitesmoke;
 }
 
@@ -59,7 +77,7 @@
 
 .message-btn:focus{
     color: whitesmoke;
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(45, 45, 45);
     box-shadow: 0 0 10px black;
 }
 
