--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -12,13 +12,16 @@
 .home-page-footer {
     width: 60%; /* As the picture uses the 40% of the screen, footer needs to use only 60% */
     margin-left: auto; /* Also, align it to the right, to see that 60% */
+    clip-path: polygon(30% 0, 70% 0, 80% 100%, 20% 100%); /*Trapezoid form for 60%*/
     @media screen and (max-width: 992px) {
           width: 100%; /* When the screen is smaller and the left picture dissappear the footer returns to 100% */
+          clip-path: polygon(0% 0, 100% 0, 100% 100%, 0% 100%); /*Normal footer for mobile.*/
       }
 }
 
 .other-page-footer {
     width: 100%; /* Width for other pages */
+    clip-path: polygon(35% 0, 65% 0, 75% 100%, 25% 100%); /*Trapezoid form for 100%*/
   }
 
 .footer-icons a {
@@ -31,7 +34,7 @@
 }
 
 .dark .home-page-footer, .dark .other-page-footer {
-    background-color: black;
+    background-color: rgb(28, 28, 28);
 }
 
 .footer-logo {
