--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -4,7 +4,7 @@
 }
 
 .dark .navbar {
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(45, 45, 45);;
 }
 
 .navbar-nav {
@@ -50,7 +50,7 @@
 
 .nav-item a:focus{
     color: whitesmoke;
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(45, 45, 45);
     box-shadow: 0 0 10px black;
 }
 
@@ -74,7 +74,7 @@
 
 .dark .custom-icon {
     color: whitesmoke;
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(45, 45, 45);;
 }
 
 .custom-icon:hover {
@@ -89,7 +89,7 @@
 
 .custom-icon:focus {
     color: whitesmoke;
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(45, 45, 45);
     box-shadow: 0 0 10px black;
 }
 
