--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -12,47 +12,8 @@
 }
 
 #home-img-medium {
-    padding: 0 80px;
-}
-
-#home-img-small {
-    padding: 0 30px;
-}
-
-.resume-btn {
-    margin-top: 16px;
-    padding: 12px 24px;
-    border-radius: 5px;
-    color: black;
-    background-color: lightgray;
-    transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease;
-    border: none;
-    outline: none;
-}
-
-.dark .resume-btn {
-    background-color: rgb(45, 45, 45);
-    color: whitesmoke;
-}
-
-.resume-btn:hover {
-    background-color: rgb(65, 65, 65);
-    box-shadow: 0 0 10px black;
-    color: whitesmoke;
-}
-
-.dark .resume-btn:hover {
-    box-shadow: 0 0 10px lightgray;
-}
-
-.resume-btn:focus{
-    color: whitesmoke;
-    background-color: rgb(45, 45, 45);
-    box-shadow: 0 0 10px black;
-}
-
-.dark .resume-btn:focus{
-    box-shadow: 0 0 10px whitesmoke;
+    padding: 0 15vw;
+    margin-bottom: 25px;
 }
 
 h1.w3-jumbo {
