--- a/src/components/css/LanguageToggle.css
+++ b/src/components/css/LanguageToggle.css
@@ -1,23 +1,8 @@
-/* INCLUDES CONTAINER FOR THEME & LANGUAJE COLOR */
-.toggle-container {
-    display: inline-flex; /* Use inline-flex to adjust to the content's width */
-    gap: 10px; /* Adjust the gap (spacing) between the two components as needed */
-    align-items: center;
-    background-color: lightgray;
-    padding: 5px;
-    border-radius: 5px;
-    transition: background-color 0.5s ease;
-}
-
-.dark .toggle-container {
-    background-color: rgb(45, 45, 45);
-}
-
 .dropdown-toggle {
     background: none;
     border: none;
     color: black;
-    transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease;
+    transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s;
 }
 
 .dark .dropdown-toggle {
@@ -25,27 +10,29 @@
 }
 
 .dropdown-toggle:hover,
-.dropdown-toggle:active {
-    background-color: rgb(65, 65, 65) !important;
-    box-shadow: 0 0 10px black;
-}
-
-.dark .dropdown-toggle:hover {
-    box-shadow: 0 0 10px lightgray;
-}
-
+.dropdown-toggle:active,
 .dropdown-toggle:focus {
-    color: whitesmoke !important;
-    background-color: rgb(45, 45, 45) !important;
-    box-shadow: 0 0 10px black;
+    color: whitesmoke;
+    background-color: rgb(65, 65, 65) !important;
+    box-shadow: 0 0 5px #ffd500, 0 0 10px #ffd500, 0 0 15px #ff9100, 0 0 20px #ff9100;
+    outline: none;
 }
 
+.dark .dropdown-toggle:hover,
+.dark .dropdown-toggle:active,
 .dark .dropdown-toggle:focus {
-    box-shadow: 0 0 10px whitesmoke;
+    background-color: rgb(18, 18, 18) !important;
+    box-shadow: 0 0 5px #00FFFF, 0 0 10px #00FFFF, 0 0 15px #11b1cd, 0 0 20px #11b1cd;
 }
 
 .dropdown-menu {
-    background-color: rgb(45, 45, 45);;
+    background-color: rgb(45, 45, 45);
+    border: 2px solid #ff9100;
+}
+
+.dark .dropdown-menu {
+    background-color: rgb(45, 45, 45);
+    border: 2px solid #11b1cd;
 }
 
 .dropdown-item {
