--- a/src/components/css/NavButton.css
+++ b/src/components/css/NavButton.css
@@ -3,39 +3,35 @@
     top: 0;
     margin-top: 12px;
     margin-right: 24px;
-    width: 58.83px;
-    height: 51.83px;
+    width: 50px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 5px;
+    border: 2px solid #ff9100;
     color: black;
     background-color: whitesmoke;
-    transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease;
+    transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease, border 0.5s ease;
+    z-index: 5;
 }
 
 .dark #menuIcon{
-    color: whitesmoke;
     background-color: rgb(45, 45, 45);
+    color: whitesmoke;
+    border: 2px solid #11b1cd;
 }
 
-#menuIcon:hover {
+#menuIcon:hover,
+#menuIcon:focus {
     background-color: rgb(65, 65, 65) !important;
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 5px #ffd500, 0 0 10px #ffd500, 0 0 15px #ff9100, 0 0 20px #ff9100;
     color: whitesmoke !important;
-}
-
-.dark #menuIcon:hover {
-    box-shadow: 0 0 10px lightgray;
-}
-
-#menuIcon:focus{
-    color: whitesmoke;
-    background-color: rgb(45, 45, 45);
-    box-shadow: 0 0 10px black;
     outline: none;
 }
 
-.dark #menuIcon:focus{
-    box-shadow: 0 0 10px whitesmoke;
+.dark #menuIcon:hover,
+.dark #menuIcon:focus {
+    background-color: rgb(18, 18, 18) !important;
+    box-shadow: 0 0 5px #00FFFF, 0 0 10px #00FFFF, 0 0 15px #11b1cd, 0 0 20px #11b1cd;
 }
