--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ body.dark {
 .normal-btn:hover,
 .normal-btn:focus {
     background-color: rgb(65, 65, 65);
-    box-shadow: 0 0 10px #ffd500, 0 0 15px #ffd500, 0 0 20px #ffd500, 0 0 25px #ff9100, 0 0 30px #ff9100;
+    box-shadow: 0 0 10px #ffd500, 0 0 15px #ffd500, 0 0 20px #ffb553, 0 0 25px #ff9100, 0 0 30px #ff9100;
     color: whitesmoke;
 }
 
@@ -88,9 +88,13 @@ body.dark {
     white-space: nowrap;/* This is for the text not to be wrapped and it will stay in one line */
 }
 
+.dark .small-btn {
+    background-color: rgb(75, 75, 75);
+}
+
 .small-btn:hover,
 .small-btn:focus {
-    box-shadow: 0 0 5px #ffd500, 0 0 10px #ffd500, 0 0 15px #ff9100, 0 0 20px #ff9100;
+    box-shadow: 0 0 5px #ffd500, 0 0 10px #ffd500, 0 0 15px #ffb553, 0 0 20px #ffb553;
 }
 
 .dark .small-btn:hover,
