--- a/src/components/css/NavButton.css
+++ b/src/components/css/NavButton.css
@@ -9,15 +9,15 @@
     align-items: center;
     justify-content: center;
     border-radius: 5px;
-    border: 2px solid #ff9100;
+    border: 2px solid #ffb553;
     color: black;
-    background-color: whitesmoke;
+    background-color: #fff7ec;
     transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease, border 0.5s ease;
     z-index: 5;
 }
 
 .dark #menuIcon{
-    background-color: rgb(45, 45, 45);
+    background-color: #0f2027;;
     color: whitesmoke;
     border: 2px solid #11b1cd;
 }
@@ -25,7 +25,7 @@
 #menuIcon:hover,
 #menuIcon:focus {
     background-color: rgb(65, 65, 65) !important;
-    box-shadow: 0 0 5px #ffd500, 0 0 10px #ffd500, 0 0 15px #ff9100, 0 0 20px #ff9100;
+    box-shadow: 0 0 5px #ffd500, 0 0 10px #ffd500, 0 0 15px #ffb553, 0 0 20px #ffb553;
     color: whitesmoke !important;
     outline: none;
 }
