--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -9,10 +9,7 @@
 
 .navbar-nav {
     gap: 10px; /* Adjust the gap (spacing) between the two components as needed */
-}
-
-.nav-link{
-    padding: 7.5px 0px 7.5px 0px !important;
+    align-items: center;
 }
 
 .icon-center {
@@ -21,42 +18,6 @@
     vertical-align: middle;
 }
 
-.nav-item a{
-    text-decoration: none;
-    color: black;
-    transition: color 0.5s ease;
-    height: 42.88px;
-    width: 119.18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease;
-}
-
-.dark .nav-item a {
-    color: whitesmoke;
-}
-
-.nav-item a:hover {
-    background-color: rgb(65, 65, 65) !important;
-    box-shadow: 0 0 10px black;
-    color: whitesmoke !important;
-}
-
-.dark .nav-item a:hover {
-    box-shadow: 0 0 10px lightgray;
-}
-
-.nav-item a:focus{
-    color: whitesmoke;
-    background-color: rgb(45, 45, 45);
-    box-shadow: 0 0 10px black;
-}
-
-.dark .nav-item a:focus{
-    box-shadow: 0 0 10px whitesmoke;
-}
 
 /*MOBILE ICON & DROPDOWN STYLE*/
 .custom-icon {
@@ -74,25 +35,18 @@
 
 .dark .custom-icon {
     color: whitesmoke;
-    background-color: rgb(45, 45, 45);;
+    background-color: rgb(45, 45, 45);
 }
 
-.custom-icon:hover {
+.custom-icon:hover,
+.custom-icon:focus {
     background-color: rgb(65, 65, 65) !important;
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 5px #ffd500, 0 0 10px #ffd500, 0 0 15px #ffb553, 0 0 20px #ffb553;
     color: whitesmoke !important;
 }
 
-.dark .custom-icon:hover {
-    box-shadow: 0 0 10px lightgray;
-}
-
-.custom-icon:focus {
-    color: whitesmoke;
-    background-color: rgb(45, 45, 45);
-    box-shadow: 0 0 10px black;
-}
-
+.dark .custom-icon:hover,
 .dark .custom-icon:focus {
-    box-shadow: 0 0 10px whitesmoke;
+    background-color: rgb(18, 18, 18) !important;
+    box-shadow: 0 0 5px #00FFFF, 0 0 10px #00FFFF, 0 0 15px #11b1cd, 0 0 20px #11b1cd;
 }
