--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -19,3 +19,33 @@
 h1.w3-jumbo {
     font-weight: bold;
 }
+
+.under-text {
+    margin-bottom: 30px;
+}
+
+.header-icon {
+    font-size: 4vw;
+    color: #d9c48b;
+    padding: 15px;
+    transition: color 0.5s ease, text-shadow 0.5s ease;
+    @media screen and (max-width: 992px) {
+        font-size: 8vw;
+    }
+}
+
+.dark .header-icon {
+    color: #4d6974;
+}
+
+.header-icon:hover,
+.header-icon:focus {
+    color: rgb(65, 65, 65);
+    text-shadow: 0 0 10px #ffd500, 0 0 15px #ffd500, 0 0 20px #ffb553, 0 0 25px #ff9100, 0 0 30px #ff9100;
+}
+
+.dark .header-icon:hover,
+.dark .header-icon:focus {
+    color: rgb(18, 18, 18);
+    text-shadow: 0 0 10px #00FFFF, 0 0 15px #00FFFF, 0 0 20px #00FFFF, 0 0 25px #11b1cd, 0 0 30px #11b1cd;
+}
