--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -1,10 +1,18 @@
 .navbar {
-    background-color: lightgray;
+    background-color: #a9a18a;
     transition: background-color 0.5s ease;
 }
 
 .dark .navbar {
-    background-color: rgb(45, 45, 45);;
+    background-color: #192429;
+}
+
+.navbar .normal-btn {
+    background-color: transparent;
+}
+
+.dark .navbar .normal-btn {
+    background-color: transparent;
 }
 
 .navbar-nav {
@@ -22,20 +30,20 @@
 /*MOBILE ICON & DROPDOWN STYLE*/
 .custom-icon {
     font-size: 100%;
-    height: 37.75px;
+    height: 45px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 5px;
     border: none;
     color: black;
-    background-color: lightgray;
+    background-color: #a9a18a;
     transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease;
 }
 
 .dark .custom-icon {
     color: whitesmoke;
-    background-color: rgb(45, 45, 45);
+    background-color: #192429;
 }
 
 .custom-icon:hover,
