--- a/src/components/css/AboutSection.css
+++ b/src/components/css/AboutSection.css
@@ -13,12 +13,12 @@
 }
 
 .icon-container:hover {
-    background-color: lightgrey;
+    background-color: #b1bfc5;
     transform: scale(1.05);
 }
 
 .dark .icon-container:hover {
-    background-color: rgb(65, 65, 65);
+    background-color: #0c3545;
 }
 
 .iconImg {
@@ -28,7 +28,7 @@
 
 #about-text {
     margin-bottom: 70px;
-    color: black;
+    color: #04223b;
     font-size: 1.2rem;
     transition: color 0.5s ease;
 }
@@ -43,10 +43,15 @@
     text-decoration: underline;
     font-size: large;
     text-align: left;
+    color: #04223b;
+}
+
+.dark .skill-title {
+    color: whitesmoke;
 }
 
 .skill-text{
-    color: black;
+    color: #04223b;
     margin-top: 5px;
     margin-bottom: 0px;
     transition: color 0.5s ease;
