--- a/src/components/css/LeftSidebar.css
+++ b/src/components/css/LeftSidebar.css
@@ -1,5 +1,6 @@
 #sidebarImg {
     width: 40%;
+    z-index: -1;
 }
 
 .sidebar-background {
@@ -19,7 +20,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), whitesmoke);
+    background: linear-gradient(to right, rgba(255, 255, 255, 0), #d3d6d8);
     opacity: 1;
     transition: opacity 0.5s ease;
 }
