--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #a9a18a;
+    background-color: #b1bfc5;
     transition: background-color 0.5s ease;
 }
 
@@ -18,10 +18,11 @@
 
 .nav-item {
     width: 140px;
-    height: 40px;
 }
 
 .navbar-nav {
+    display: flex;
+    align-items: center;
     gap: 10px; /* Adjust the gap (spacing) between the two components as needed */
 }
 
@@ -32,8 +33,8 @@
 }
 
 .navbar-dropdown {
-    background-color: #d9c48b;
-    border: 2px solid #bfad6e;
+    background-color: #0f2027;
+    border: 2px solid #1fa8ca;
     width: 180px;
     min-width: 0; /*As bootstrap dropdown minimun is 160px it's necessary to override this with a min-width.*/
 }
@@ -53,8 +54,8 @@
     justify-content: center;
     border-radius: 5px;
     border: none;
-    color: black;
-    background-color: #a9a18a;
+    color: whitesmoke;
+    background-color: #4d6974;
     transition: color 0.5s ease, background-color 0.5s ease, box-shadow 0.5s ease;
 }
 
@@ -65,8 +66,8 @@
 
 .custom-icon:hover,
 .custom-icon:focus {
-    background-color: rgb(65, 65, 65) !important;
-    box-shadow: 0 0 5px #ffd500, 0 0 10px #ffd500, 0 0 15px #ffb553, 0 0 20px #ffb553;
+    background-color: rgb(18, 18, 18) !important;
+    box-shadow: 0 0 5px #00FFFF, 0 0 10px #00FFFF, 0 0 15px #11b1cd, 0 0 20px #11b1cd;
     color: whitesmoke !important;
 }
 
