--- a/src/components/css/ProjectBody.css
+++ b/src/components/css/ProjectBody.css
@@ -1,18 +1,3 @@
-footer {
-    background-color: lightgray;
-    opacity: 0.7;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 25vh;
-    width: 100%; /* As the picture uses the 40% of the screen, footer needs to use only 60% */
-    margin-left: auto; /* Also, align it to the right, to see that 60% */
-    @media screen and (max-width: 992px) {
-          width: 100%; /* When the screen is smaller and the left picture dissappear the footer returns to 100% */
-      }
-}
-
 .project-title{
     font-weight: bold;
     margin-top: 30px;
@@ -26,7 +11,13 @@ footer {
 
 .project-text{
     font-size: large;
+    color: #04223b;
 }
+
+.dark .project-text{
+    color: whitesmoke;
+}
+
 
 .project-img {
     border-radius: 5px;
